--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -253,7 +253,7 @@
                                     </div>
                                     <!-- price -->
                                     <p class="text-dark">
-                                        <span class="font-weight-light">EUR </span><strong th:text="${book.price}"></strong>
+                                        <span class="font-weight-light">€ </span><strong th:text="${book.price}"></strong>
                                     </p>
                                     <!-- stock alarms -->
                                     <p class="small mt-n3 font-weight-lighter">
