--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -307,7 +307,7 @@
 
         <!-- footer -->
         <footer class="footer bg-white text-center pb-3" th:fragment="footer">
-            <hr style="max-width: 33%"/>
+            <hr style="max-width: 33%; margin-top: 3rem"/>
             <span class="info-copyrigth"><a class="text-info" href="https://github.com/misrraimsp/firstmarket" style="text-decoration: none">FirstMarket Project</a> © 2020</span>
         </footer>
 
