--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -81,7 +81,7 @@
                                     <input type="hidden" name="bookId" th:value="${book.id}"/>
                                     <div class="form-group">
                                         <div class="input-group">
-                                            <select class="custom-select custom-select-sm text-secondary border border-secondary" name="bookStatus">
+                                            <select class="custom-select custom-select-sm text-secondary border border-secondary" name="productStatus">
                                                 <option th:each="status : ${T(misrraimsp.uned.pfg.firstmarket.config.staticParameter.ProductStatus).values()}"
                                                         th:value="${status.ordinal()}"
                                                         th:text="${status.text}"
