--- a/src/main/resources/templates/checkoutForm.html
+++ b/src/main/resources/templates/checkoutForm.html
@@ -110,44 +110,42 @@
                 </div>
                 <!-- purchase summary -->
                 <div class="col-sm-3">
-                    <div class="row bg-white">
-                        <div class="col-sm-12 d-flex flex-column">
-                            <!-- panel title -->
-                            <div class="align-self-center mt-3">
-                                <p class="text-dark font-weight-light">Purchase Summary</p>
-                            </div>
-                            <!-- single book -->
-                            <div class="d-flex my-3 align-items-end" th:each="item : ${user.cart.items}">
-                                <!-- left content -->
-                                <div class="mr-auto">
-                                    <div class="d-flex flex-column">
-                                        <!-- book title -->
-                                        <div>
-                                            <a class="text-info font-weight-bold" th:href="@{/book/{id}(id=${item.book.id})}" style="text-decoration: none">
-                                                <p class="my-0" th:unless="${item.book.title.isBlank()}">
-                                                    <span th:text="${item.book.title.substring(0, T(java.lang.Math).min(item.book.title.length(), __${@environment.getProperty('fm.front-end.checkout.title-max-size')}__))}">Book title</span>
-                                                </p>
-                                                <p class="my-0" th:if="${item.book.title.isBlank()}">
-                                                    <small><i>unknown title</i></small>
-                                                </p>
-                                            </a>
-                                        </div>
-                                        <!-- price composition -->
-                                        <div class="my-0 small text-dark">
-                                            <span th:text="${item.quantity}"></span> x <span class="font-weight-lighter">€ </span><span th:text="${item.book.price}"></span>
-                                        </div>
+                    <div class="d-flex flex-column bg-white">
+                        <!-- panel title -->
+                        <div class="align-self-center mt-3 mb-5">
+                            <strong class="text-dark">Purchase Summary</strong>
+                        </div>
+                        <!-- single book -->
+                        <div class="d-flex my-3 mx-3 align-items-end" th:each="item : ${user.cart.items}">
+                            <!-- left content -->
+                            <div class="mr-auto">
+                                <div class="d-flex flex-column">
+                                    <!-- book title -->
+                                    <div>
+                                        <a class="text-info font-weight-bold" th:href="@{/book/{id}(id=${item.book.id})}" style="text-decoration: none">
+                                            <p class="my-0" th:unless="${item.book.title.isBlank()}">
+                                                <span th:text="${item.book.title.substring(0, T(java.lang.Math).min(item.book.title.length(), __${@environment.getProperty('fm.front-end.checkout.title-max-size')}__))}">Book title</span>
+                                            </p>
+                                            <p class="my-0" th:if="${item.book.title.isBlank()}">
+                                                <small><i>unknown title</i></small>
+                                            </p>
+                                        </a>
+                                    </div>
+                                    <!-- price composition -->
+                                    <div class="my-0 small text-dark">
+                                        <span th:text="${item.quantity}"></span> x <span class="font-weight-lighter">€ </span><span th:text="${item.book.price}"></span>
                                     </div>
                                 </div>
-                                <!-- right content -->
-                                <div>
-                                    <p class="my-0 small text-dark"><span class="font-weight-lighter">€ </span><span th:text="${item.price}">100</span></p>
-                                </div>
                             </div>
-                            <!-- final price -->
-                            <div class="d-flex my-3 text-dark">
-                                <div class="mr-auto"><span class="font-weight-bolder">Total</span></div>
-                                <div><span class="font-weight-lighter">€ </span><span class="font-weight-bolder" id="total" th:text="${user.cart.price}">380</span></div>
+                            <!-- right content -->
+                            <div>
+                                <p class="my-0 small text-dark"><span class="font-weight-lighter">€ </span><span th:text="${item.price}">100</span></p>
                             </div>
+                        </div>
+                        <!-- final price -->
+                        <div class="d-flex my-3 mx-3 text-dark">
+                            <div class="mr-auto"><span class="font-weight-bolder">Total</span></div>
+                            <div><span class="font-weight-lighter">€ </span><span class="font-weight-bolder" id="total" th:text="${user.cart.price}">380</span></div>
                         </div>
                     </div>
                 </div>
