--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -11,7 +11,13 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title_3_6_3(text = 'Login')"></div>
+            <div class="row mt-5 mb-3">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
+                    <h2 class="text-dark text-center font-weight-light">Login</h2>
+                </div>
+                <div class="col-sm-3"></div>
+            </div>
             <div class="row">
                 <!-- left margin -->
                 <div class="col-sm-3"></div>
