--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -20,7 +20,7 @@
                 <div class="col-sm-10">
                     <div class="alert alert-danger alert-dismissible fade show">
                         <button type="button" class="close" data-dismiss="alert">&times;</button>
-                        <small>Book removed from cart due to unavailability: <strong th:text="${item.book.title}"></strong></small>
+                        <small><span th:text="#{cart.item.disabled} + ' '"></span><strong th:text="${item.book.title}"></strong></small>
                     </div>
                 </div>
                 <!-- right margin -->
@@ -33,9 +33,8 @@
                 <!-- alert box -->
                 <div class="col-sm-10">
                     <div class="alert alert-warning alert-dismissible fade show">
-                        <!--<small>En estos momentos no disponemos -en la cantidad pedida- de los libros resaltados. Por favor, para continuar con la compra disminuya su cantidad</small>-->
                         <button type="button" class="close" data-dismiss="alert">&times;</button>
-                        <small>At the moment we do not have, <strong>in the quantity ordered</strong>, the highlighted books. Please, to continue with the purchase, <strong>decrease the quantity and try again</strong>.</small>
+                        <small th:text="#{cart.item.outOfStock}"></small>
                     </div>
                 </div>
                 <!-- right margin -->
@@ -67,8 +66,8 @@
                     </div>
                     <!-- items -->
                     <div class="d-flex flex-column">
-                        <div class="my-2" th:each="item : ${user.cart.items}">
-                            <div class="row d-flex align-items-center px-0 mx-0" th:classappend="${itemsOutOfStock ne null && itemsOutOfStock.contains(item)} ? 'out-of-stock' : 'bg-white'" th:id="'i-' + ${item.id}">
+                        <div class="my-2" th:id="'i-' + ${item.id}" th:each="item : ${user.cart.items}" th:classappend="${itemsOutOfStock ne null && itemsOutOfStock.contains(item)} ? 'out-of-stock' : 'bg-white'">
+                            <div class="row d-flex align-items-center px-0 mx-0">
                                 <!-- select item -->
                                 <div class="col-sm-1">
                                     <div class="pretty p-default p-round p-thick">
