--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -199,5 +199,7 @@
         <script th:src="@{/js/binaryInputSwitch.js}"></script>
         <!-- dynamic authors -->
         <script th:src="@{/js/dynamicAuthors.js}"></script>
+        <!-- back button -->
+        <script th:src="@{/js/back.js}"></script>
     </body>
 </html>
