--- a/src/main/resources/templates/editEmailForm.html
+++ b/src/main/resources/templates/editEmailForm.html
@@ -52,5 +52,7 @@
         <!-- footer -->
         <footer th:replace="fragments/components::footer"></footer>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
+        <!-- back button -->
+        <script th:src="@{/js/back.js}"></script>
     </body>
 </html>
