--- a/src/main/resources/templates/editPasswordForm.html
+++ b/src/main/resources/templates/editPasswordForm.html
@@ -61,5 +61,7 @@
         <footer th:replace="fragments/components::footer"></footer>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
         <script th:src="@{/js/matchingPasswords.js}"></script>
+        <!-- back button -->
+        <script th:src="@{/js/back.js}"></script>
     </body>
 </html>
