--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -225,8 +225,8 @@
         <footer th:replace="fragments/components::footer"></footer>
         <script th:src="@{/js/collapsing.js}"></script>
         <!-- pagination functionality -->
-        <a id="paginationTrigger" style="display: none"></a>
-        <i id="paginationData" th:attr="totalElements=${pageOfEntities.totalElements},totalPages=${pageOfEntities.totalPages},pageIndex=${pageOfEntities.number},numberOfElements=${pageOfEntities.numberOfElements},pageSize=${pageOfEntities.size}"></i>
+        <a th:replace="fragments/components::paginationTrigger"></a>
+        <i th:replace="fragments/components::paginationData"></i>
         <script th:src="@{/js/paginationLinks.js}"></script>
         <script th:src="@{/js/paginationControl.js}"></script>
     </body>
